@@ -1,5 +1,6 @@
 libcm4all-was (1.9) unstable; urgency=low
 
+  * simple: fix assertion failure after control send error
   * require Debian Jessie or newer
 
  --   
